--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,25 +1,43 @@
-    body { font-family: Arial, sans-serif;
-         margin:0; padding:0;
-         background:#00453b96; }
+        body {
+      font-family: Arial, sans-serif;
+      margin:0;
+       padding:0;
+      background:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url('/images/background1.jpg') ;
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+    }
     header {
-  background:#333;
-     color:#fff;
-     padding:15px;
-     display:flex;
+      background:#333; color:#fff;
+      padding:15px;
+      display:flex;
      justify-content:space-between;
-     align-items:center; 
+     align-items:center;
     }
     h1 { margin:0; }
-    .search-bar {
-      display:flex;
-      gap:10px;
+    .header-right { display:flex; gap:10px; align-items:center; }
+    .header-right input { padding:8px; border-radius:5px; border:1px solid #ccc; }
+    .header-right button {
+      padding:8px 15px; background:#ff9800; color:#fff;
+      border:none; border-radius:5px; cursor:pointer;
     }
-    .search-bar input {
-      padding:8px;
-      border-radius:5px;
+    .header-right button:hover { background:#e68900; }
+    .container { padding:20px; }
+   
+    .panel {
+      background:#037947; padding:80px; margin:40px auto;
+      max-width:500px; border-radius:10px;
+      box-shadow:0 4px 10px rgba(0,0,0,0.2);
+
+    }
+
+
+     .search-bar input {
+      padding:50px;
+      border-radius:10px;
       border:1px solid #ccc;
     }
-    .container { padding:20px; }
+
 
     button { 
     padding:10px 20px;
@@ -28,13 +46,34 @@
     border:none; 
     border-radius:5px; 
     cursor:pointer;
+   
  }
-    button:hover { background:#555; }
-
-    .gym-card { background:#fff; 
+    button:hover { background:#ea7f21;}
+    
+    .gym-card {
+    background:#110f0f; 
     padding:15px; 
     margin:10px 0; 
     border-radius:5px; 
     box-shadow:0 2px 5px rgba(0,0,0,0.1);
  }
-    .gym-card img { max-width:100px; margin:5px; border-radius:5px; }
+    .panel h2 { margin-top:0; text-align:center; }
+    .panel input, .panel textarea {
+      width:100%; padding:10px; margin:10px 0;
+      border:1px solid #ccc; border-radius:5px;
+    }
+    .panel button {
+      width:100%; padding:10px;
+      background:#333;
+       color:#fff;
+        gap: 5em;
+      border:none; border-radius:5px; cursor:pointer;
+    }
+    .panel button:hover { background:#e45b0c;; }
+    .gym-card {
+      background:#fff; padding:15px; margin:10px 0;
+      border-radius:5px; box-shadow:0 2px 5px rgba(0,0,0,0.1);
+    }
+    .gym-card img { max-width:100px; margin:10px; border-radius:5px; }
+
+       
