--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@
       font-family: Arial, sans-serif;
       margin:0;
        padding:0;
-      background:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url('/images/background1.jpg') ;
+      background:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url('/images/background1.jpg') ;
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -156,8 +156,9 @@ text-decoration:double;
 
 .no-gyms {
   text-align: center;
-  color: #e91818;
+  color: #dd0505;
   font-style: italic;
+  font-size: xx-large;
   margin-top: 20px;
 }
 
@@ -270,18 +271,60 @@ text-decoration:double;
 align-items: center;
 }
 
-/* .badge {
-  background: #c7ab0d;
+/*footer*/
+
+
+footer {
+  background: #3d6902;
   color: #fff;
-  padding: 4px 10px;
-  border-radius: 12px;
-  font-size: 0.8em;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-} */
+  padding: 30px 20px;
+  margin-top: 40px;
+}
 
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  margin: auto;
+}
 
+.footer-section {
+  flex: 1;
+  min-width: 250px;
+  margin: 10px;
+}
+
+.footer-section h3, .footer-section h4 {
+  margin-bottom: 10px;
+  color: #ff9800;
+}
+
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-section ul li {
+  margin: 6px 0;
+}
+
+.footer-section ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer-section ul li a:hover {
+  text-decoration: underline;
+}
+
+.footer-bottom {
+  text-align: center;
+  margin-top: 20px;
+  border-top: 1px solid rgba(255,255,255,0.3);
+  padding-top: 10px;
+  font-size: 0.9em;
+}
 
 
 
