--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,13 +2,13 @@
       font-family: Arial, sans-serif;
       margin:0;
        padding:0;
-      background:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url('/images/background1.jpg') ;
+      background:linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.9)),url('/images/background1.jpg') ;
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
     }
     header {
-      background:#046113; color:#fff;
+      background:#3d6902; color:#fff;
       padding:30px;
       display:flex;
      justify-content:space-between;
@@ -36,12 +36,12 @@
       border-radius:5px;
       cursor:pointer;
     }
-    .header-right button:hover { background:#e68900; }
+    .header-right button:hover { background:#ff9800; }
 
     .container { padding:20px; }
    
     .panel {
-      background:#e7791fa1; 
+      background:#ff9800; 
       padding:100px;
       margin:50px auto;
       max-width:500px; 
@@ -69,8 +69,11 @@
  
    
  }
-   button:hover { background:#ea7f21;}
+   button:hover { background:#ff9800;}
     
+.header h2{
+  color: white;
+}
 
 
 
@@ -99,7 +102,7 @@
       justify-content: center;
     
     }
-    .panel button:hover { background:#e45b0c;; }
+    .panel button:hover { background:#ff9800;; }
 
  
     .gym-card img { max-width:250px;
@@ -109,7 +112,7 @@
 
 
     .gym-card {
-  background: #df6c3f9a;
+  background: #78817c23;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   margin: 20px;
@@ -132,7 +135,7 @@
 
 .gym-header h3 {
   margin: 0;
-  color: #13700b;
+  color: #ff9800;
 text-decoration:double;
 }
 
@@ -179,7 +182,7 @@ text-decoration:double;
 .pricing-container h2 {
   font-size: 2em;
   margin-bottom: 10px;
-  color: #13700b;
+  color: #3d6902;
 }
 
 .pricing-intro {
@@ -196,7 +199,7 @@ text-decoration:double;
 }
 
 .pricing-card {
-  background: #d37319b6;
+  background: #ff9800;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   padding: 60px;
@@ -212,14 +215,14 @@ text-decoration:double;
 
 .pricing-card h3 {
   margin: 0;
-  color: #037947;
+  color: #3d6902;
 
 }
 
 .price {
   font-size: 1.8em;
   margin: 20px 0;
-  color: #2e6303;
+  color: #3d6902;
 }
 
 .price span {
@@ -261,7 +264,7 @@ text-decoration:double;
 }
 
 .pricing-card button:hover {
-  background: #e68900;
+  background: black;
 }
 #para1{
   text-decoration: line-through;
@@ -269,6 +272,38 @@ text-decoration:double;
   padding: 10px;
   justify-content: right;
 align-items: center;
+}
+
+
+
+
+
+/*About*/
+.about{
+  background-color: #78817c23;
+padding-right: 30px;
+color: #ff9800;
+
+}
+.about h3{
+  text-align: center;
+  font-size: xx-large;
+  font-style: italic;
+}
+p{
+  font-size: x-large;
+  font-weight: 300;
+  font-style: italic;
+
+ color: white;
+}
+.abt{
+  display: flex;
+  width: 100%;
+}
+
+.abt img{
+width: 100%;
 }
 
 /*footer*/
@@ -371,7 +406,7 @@ footer {
 
   .header-right input,
   .header-right button {
-    width: 100%;   /* ✅ stack inputs/buttons full width */
+    width: 100%;   
     margin: 5px 0;
   }
 
