--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@
       font-family: Arial, sans-serif;
       margin:0;
        padding:0;
-      background:linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.6)),url('/images/background1.jpg') ;
+      background:linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.6)),url('images/logoo.png') ;
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -13,6 +13,7 @@
       display:flex;
      justify-content:space-between;
      align-items:center;
+    
     }
     h1 { margin:0; }
 
